--- a/06_Paper/ER-ED/ERED_Stage2/Results.Rmd
+++ b/06_Paper/ER-ED/ERED_Stage2/Results.Rmd
@@ -80,15 +80,14 @@ A more detailed list of all reasons, including those given by participants who s
 
 Individual SVs could be determined for `r nrow(data_SV)/3` participants for all three ER strategies.
 SVs ranged between `r papaja::apa_num(min(data_SV$sv), digits = 3)` and `r papaja::apa_num(max(data_SV$sv))`.
-$n=$ `r  papaja::printnum(sum(data_SV$sv == 1))` had one SV of 1.0, indicating a clear preference for one ER strategy.
-Absolute preferences for ER strategies were relatively equally distributed.
-Highest SV for distraction was reported by $n=$ `r  papaja::printnum(sum(data_SV$strat_c[data_SV$strategy == "distraction"] == -1))`, for distancing by $n=$ `r  papaja::printnum(sum(data_SV$strat_c[data_SV$strategy == "distancing"] == -1))`, and for suppression by $n=$ `r papaja::printnum(sum(data_SV$strat_c[data_SV$strategy == "suppression"] == -1))`.
+Nearly all ($n=$ `r  papaja::printnum(sum(data_SV$sv == 1))`) participants had one SV of 1.0, indicating a clear preference for one ER strategy over the other two.
+Absolute preferences for ER strategies were relatively equally distributed: $n=$ `r  papaja::printnum(sum(data_SV$strat_c[data_SV$strategy == "distraction"] == -1))` participants assigned their highest SV to distraction, $n=$ `r  papaja::printnum(sum(data_SV$strat_c[data_SV$strategy == "distancing"] == -1))` to distancing, and $n=$ `r papaja::printnum(sum(data_SV$strat_c[data_SV$strategy == "suppression"] == -1))` to suppression.
 
-To investigate, which variables can predict individual SVs of ER strategies, a multilevel model approach was chosen.
-The ICC of the null model was $ICC=$ `r papaja::printnum(ICC_between_MLM_0)`, indicating that the level-2 predictor subject accounted for `r papaja::printnum(round(ICC_between_MLM_0*100, digits = 1))`% of total variance.
+To investigate which variables can predict individual SVs of ER strategies, a multilevel model approach was chosen.
+The ICC of the null model was $ICC=$ `r papaja::printnum(ICC_between_MLM_0)`, indicating that the level-2 predictor *subject* accounted for `r papaja::printnum(round(ICC_between_MLM_0*100, digits = 1))`% of total variance.
 The preregistered model showed a correlation of $r=$ `r papaja::printnum(attr(summary(MLM_1)$varcor[1]$ID,"correlation")[1,2])` between the random effects *subjects* and *recoded strategy* ($BF10$ of the variable *strategy*: `r papaja::apa_print(MLM_1_BF)$statistic`).
-Our model explained `r papaja::printnum(MLM1_r2[2]*100, digits=1)`% of variance and thus we assumed our model was overfitted due to including recoded strategy as the random slope.
-We therefore set a new model without the recoded strategy as the random slope factor to estimate the influence of predictors on SVs more precisely.
+Our model explained `r papaja::printnum(MLM1_r2[2]*100, digits=1)`% of variance and thus we assumed our model was overfitted because we included *recoded strategy* as the random slope.
+We therefore set a new model without *recoded strategy* as the random slope factor to estimate the influence of predictors on SVs more precisely.
 The second model followed the specification: 
 $$
 \begin{split}
@@ -104,7 +103,7 @@ All results of the second model are in Table \@ref(tab:TabMLMH5).
 ```{r TabMLMH5, echo=FALSE, message=FALSE, warning=FALSE}
 papaja::apa_table(
   H5_M2_table,
-  caption = "Results of multilevel model predicting subjective values of ER strategies.",
+  caption = "Results of the multilevel model predicting subjective values of ER strategies.",
   booktabs = TRUE,
   escape = FALSE,
   placement = "H",
@@ -125,16 +124,16 @@ There was a significant association between predicted choice and actual choice (
 
 [INSERT FIGURE 4 HERE]
 
-We then conducted an ordinal regression with the dependent variable "choice" and the individual SVs of all three strategies as independent variables.
+We then conducted an ordinal regression with the dependent variable *choice* and the individual SVs of all three strategies as independent variables.
 Overall model fit was fair with $R^{2}=$ `r papaja::printnum(Choice_OrdReg_R2)`.
 The SV of the strategy distraction contributed significantly to the model (`r papaja::apa_print(Choice_OrdReg)$full_result$distraction_sv`, $BF10=$ `r papaja::printnum(Choice_OrdReg_Posterior$BFtu_exploratory[2,2])`).
-The estimated odds ratio indicated a higher chance of choosing strategy distraction, when the SV of that strategy is higher.
+The estimated odds ratio indicated a higher chance of choosing the strategy distraction when the SV of that strategy was higher.
 Additionally, the predictor SV of the strategy suppression contributed significantly to the model (`r papaja::apa_print(Choice_OrdReg)$full_result$suppression_sv`, $BF10=$ `r papaja::printnum(Choice_OrdReg_Posterior$BFtu_exploratory[4,3])`).
-The estimated odds ratio indicated that a participant is more likely to later choose suppression, when the SV of the strategy suppression is higher.
+The estimated odds ratio indicated that a participant was more likely to later choose suppression, when the SV of the strategy suppression was higher.
 
-Last, we investigated whether SVs are associated with ER flexibility.
-We conducted a logistic regression to inspect whether participants' individual $slopes$ and $intercepts$ of ordered SVs could predict their ER flexibility score.
-We found neither a significant association between $slopes$ of SVs and FlexER score (`r papaja::apa_print(Flex_LM)$full_result$slope`, `r papaja::apa_print(Flex_LM_BF)$full_result$slope`), nor between $intercepts$ and FlexER score (`r papaja::apa_print(Flex_LM)$full_result$intercept`, `r papaja::apa_print(Flex_LM_BF)$full_result$intercept`).
+Lastly, we investigated whether SVs were associated with ER flexibility.
+We conducted a logistic regression to inspect whether participants' individual slopes and intercepts of ordered SVs could predict their ER flexibility score.
+We found neither a significant association between slopes and FlexER score (`r papaja::apa_print(Flex_LM)$full_result$slope`, `r papaja::apa_print(Flex_LM_BF)$full_result$slope`), nor between intercepts and FlexER score (`r papaja::apa_print(Flex_LM)$full_result$intercept`, `r papaja::apa_print(Flex_LM_BF)$full_result$intercept`).
 However, model fit was relatively low (`r papaja::apa_print(Flex_LM)$full_result$modelfit$r2`).
 
 ## 3.3. Exploratory analyses
